# print-bench

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-15-printbench-redesign.md
docs/superpowers/specs/: 2026-05-15-printbench-redesign-design.md
pb/: cli.py
pb_printbench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
templates/: style.md  subjects.yaml
