[project]
name = "pb-printbench"
version = "0.1.0"
description = "Disciplined prompt → image → 3D model loops, domain-agnostic."
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pillow>=10",
    "PyYAML>=6.0",
    "pyperclip>=1.8",
]

[project.scripts]
pb = "pb.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pb*"]
